<resources>
    <string name="app_name">Calculadora</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="igual">=</string>
    <string name="limpiar">Limpiar pantalla</string>
    <string name="div_cero">Error: división por cero</string>
    <string name="no_operacion">Error: No ha ingresado una operación</string>
    <string name="no_numero">Error: Primero debe ingresar un número.</string>
    <string name="op_registrada">Operación registrada</string>
</resources>